--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,8 @@
 {
-  "extends": ["config:base", ":preserveSemverRanges"],
+  "extends": ["config:base"],
   "major": {
     "enabled": false
   },
-  "timezone": "Europe/Stockholm",
-  "rangeStrategy": "bump",
-  "prConcurrentLimit": 20,
   "packageRules": [
     {
       "groupName": "all deps",
