--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
-  "extends": ["config:base"],
+  
+  "extends": ["github>whitesource/merge-confidence:beta","config:base"],
   "major": {
     "enabled": false
   },
